@startuml
skinparam classAttributeIconSize 0

class LoadingMapUI{
}

class ShipOccupancyController {
+ getLoadingMap()
}

class ConnectionFactory {
+ getInstance()
+ getDatabaseConnection()
}

class CargoManifestStore {
+ getLoadingMap(DatabaseConnection databaseConnection)
}

class DatabaseConnection {
+ getConnection()
}

ShipOccupancyController <.up. LoadingMapUI
ShipOccupancyController "1" --> "1..*" ConnectionFactory : uses
ShipOccupancyController "1" --> "1" CargoManifestStore : uses
CargoManifestStore "1" --> "1..*" DatabaseConnection : uses



@enduml